# rust-cli

./: Cargo.toml  index.html
pkg/: package.json  rust_cli.d.ts  rust_cli.js  rust_cli_bg.wasm  rust_cli_bg.wasm.d.ts
src/: lib.rs
