[package]
name = "rust_cli"
version = "0.9.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rhai = { version = "1.18.0", features = ["serde", "wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Navigator"]
